get2gnow #00EEECa0C - how chill!  improved compatiblity...and getting sexier!
get2gnow is most def chill!  Any one who may have had issues with get2gnow segfault, espially with libsoup 2.4 - < 2.26, which I know you prolly don't know.  But any way's I've fixed a bunch of problems.  Mostly by requiring libsoup-2.4-2.26.1.  Bizarally libsoup-2.4-2.27 is currently totally busted.  I can't confirm if this is just given my current GNOME:Factory update status of my openSUSE install or if it would be the same across multiple distros.  But I don't care enough to setup multiple VMs all on my lil laptop just to confirm a devel version of GNOME library is busted.

Especially since I did find a work around.  LOL it just wasn't work able.

The only way I could get libsoup-2.24-2.27.1 to work was to literally create a new thread to process each request after a delay of at least 5 seconds.  For example one of the way I got get2gnow to work w/libsoup-2.24-2.27.1 was to create a timout thread, using g_timeout_add_seconds_full, and to have it 'resubmit' the request 5 seconds later.  Now by resubmit I mean send it back to get2gnow's very same method which created the request.  So obviously there's something whacked going on with libsoup.  There were other issue like random drops from Twitter, with http/ip error 7 (connection unexpectadly terminated).  So yeah something's whacked.

All of that said...I pretty much totally no longer care.  I'm prolly done doing any kinda of 'internet' programming.  My personal reason is that I'm an open source artist & I've been looking to find the motivation, inspiration, & especially validation to switch my focus to more graphical, multi-media applications.

Yeah, all or that was personal avoidance babble, yes my uber babbly way of saying this:

I want to, and now I'm going to, start creating *GAME *FOR WOMEN!*  I don't mean casual games, or games for targetted at existing female gamers.  I mean new genres, new gameplay, & a totally different perspect

--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -278,23 +278,22 @@
                             <property name="border_width">5</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkCheckButton" id="notify_beep_updates_check_button">
-                                <property name="label" translatable="yes">_Beep when notifying me.</property>
+                              <object class="GtkCheckButton" id="notify_my_friends_updates_check_button">
+                                <property name="label" translatable="yes">Load my _Friends' Updates at start-up.
+And notify me when they post new update(s).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
-                                <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="notify_dms_check_button">
-                                <property name="label" translatable="yes">Notify me when I get new _Direct Messages (DMs)</property>
+                                <property name="label" translatable="yes">Load my _Direct Messages(DMs) at start-up.
+And notify me when I get DMs.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -307,7 +306,8 @@
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="notify_at_mentions_check_button">
-                                <property name="label" translatable="yes">Notify me when I get new _@ replies.</property>
+                                <property name="label" translatable="yes">Load my @_replies at start-up.
+And notify me when I get new replies.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -319,15 +319,27 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkCheckButton" id="notify_my_friends_updates_check_button">
-                                <property name="label" translatable="yes">Notify me when I get new updates from friends updates</property>
+                              <object class="GtkHSeparator" id="hseparator1">
+                                <property name="visible">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">3</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="notify_beep_updates_check_button">
+                                <property name="label" translatable="yes">_Beep when notifying me.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="position">3</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">4</property>
                               </packing>
                             </child>
                             <child>
@@ -342,7 +354,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="position">4</property>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                           </object>
@@ -368,9 +380,9 @@
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="alerts_tab_label">
+              <object class="GtkLabel" id="tabs_tab_label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">New _Messages</property>
+                <property name="label" translatable="yes">_Tabs</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
@@ -385,17 +397,17 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">20</property>
                 <child>
-                  <object class="GtkFrame" id="frame5">
+                  <object class="GtkFrame" id="updates_compose_frame">
                     <property name="visible">True</property>
                     <property name="border_width">12</property>
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">none</property>
                     <child>
-                      <object class="GtkAlignment" id="alignment3">
+                      <object class="GtkAlignment" id="updates_compose_alignment">
                         <property name="visible">True</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="vbox7">
+                          <object class="GtkVBox" id="updates_compose_vbox">
                             <property name="visible">True</property>
                             <property name="orientation">vertical</property>
                             <child>
@@ -411,6 +423,34 @@
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkFrame" id="frame2">
+                                <property name="visible">True</property>
+                                <property name="label_xalign">0</property>
+                                <property name="shadow_type">none</property>
+                                <child>
+                                  <object class="GtkAlignment" id="alignment3">
+                                    <property name="visible">True</property>
+                                    <property name="left_padding">12</property>
+                                    <child>
+                                      <object class="GtkComboBox" id="replace_me_with_combo_box">
+                                        <property name="visible">True</property>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child type="label">
+                                  <object class="GtkLabel" id="label1">
+                                    <property name="visible">True</property>
+                                    <property name="label" translatable="yes">When I start an update with '/me' replace it with:</property>
+                                    <property name="use_markup">True</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </object>
