--- a/data/online-services-request-popup.ui
+++ b/data/online-services-request-popup.ui
@@ -59,7 +59,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkFrame" id="username_frame">
+          <object class="GtkFrame" id="user_name_frame">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
             <property name="shadow_type">none</property>
@@ -68,7 +68,7 @@
                 <property name="visible">True</property>
                 <property name="left_padding">24</property>
                 <child>
-                  <object class="GtkEntry" id="entry">
+                  <object class="GtkEntry" id="user_name_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">&#x25CF;</property>
@@ -77,12 +77,12 @@
               </object>
             </child>
             <child type="label">
-              <object class="GtkLabel" id="username_label">
+              <object class="GtkLabel" id="user_name_label">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">&lt;b&gt;_Username:&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
                 <property name="use_underline">True</property>
-                <property name="mnemonic_widget">entry</property>
+                <property name="mnemonic_widget">user_name_entry</property>
               </object>
             </child>
           </object>
