--- a/data/tweet-list.in.ui
+++ b/data/tweet-list.in.ui
@@ -22,6 +22,8 @@
   </object>
   <object class="GtkListStore" id="tweet_list_list_store">
     <columns>
+      <!-- column-name GUINT_TWEET_LIST_INDEX -->
+      <column type="guint"/>
       <!-- column-name GDOUBLE_TWEET_ID -->
       <column type="gdouble"/>
       <!-- column-name GDOUBLE_USER_ID -->
@@ -54,6 +56,12 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkAdjustment" id="tweet_list_progress_bar_adjustment">
+    <property name="upper">100</property>
+    <property name="step_increment">10</property>
+    <property name="page_increment">10</property>
+    <property name="page_size">10</property>
+  </object>
   <object class="GtkVBox" id="tweet_list_vbox">
     <property name="visible">True</property>
     <property name="orientation">vertical</property>
@@ -72,7 +80,6 @@
                     <property name="label" translatable="yes">_Refresh</property>
                     <property name="use_underline">True</property>
                     <property name="stock_id">gtk-refresh</property>
-                    <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -240,7 +247,7 @@
                     <property name="yalign">0</property>
                   </object>
                   <attributes>
-                    <attribute name="pixbuf">11</attribute>
+                    <attribute name="pixbuf">12</attribute>
                   </attributes>
                 </child>
               </object>
@@ -264,7 +271,7 @@
                     <property name="wrap_width">200</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">5</attribute>
+                    <attribute name="markup">6</attribute>
                   </attributes>
                 </child>
               </object>
@@ -287,7 +294,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">13</attribute>
+                    <attribute name="markup">14</attribute>
                   </attributes>
                 </child>
               </object>
@@ -309,7 +316,7 @@
                     <property name="wrap_width">85</property>
                   </object>
                   <attributes>
-                    <attribute name="markup">14</attribute>
+                    <attribute name="markup">15</attribute>
                   </attributes>
                 </child>
               </object>
@@ -330,7 +337,7 @@
                     <property name="wrap_width">70</property>
                   </object>
                   <attributes>
-                    <attribute name="text">7</attribute>
+                    <attribute name="text">8</attribute>
                   </attributes>
                 </child>
               </object>
@@ -342,11 +349,5 @@
         <property name="position">2</property>
       </packing>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="tweet_list_progress_bar_adjustment">
-    <property name="upper">100</property>
-    <property name="step_increment">10</property>
-    <property name="page_increment">10</property>
-    <property name="page_size">10</property>
   </object>
 </interface>
