--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -22,22 +22,22 @@
                 <property name="border_width">12</property>
                 <property name="spacing">18</property>
                 <child>
-                  <object class="GtkFrame" id="tweet_view_frame">
+                  <object class="GtkFrame" id="general_look_and_feel_frame">
                     <property name="visible">True</property>
                     <property name="border_width">12</property>
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">none</property>
                     <child>
-                      <object class="GtkAlignment" id="alignment4">
+                      <object class="GtkAlignment" id="general_look_and_feel_alignment">
                         <property name="visible">True</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="vbox5">
+                          <object class="GtkVBox" id="general_look_and_feel_vbox">
                             <property name="visible">True</property>
-                            <property name="spacing">6</property>
+                            <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkCheckButton" id="use_tweet_dialog_checkbutton">
-                                <property name="label" translatable="yes">Use a separate _window to view &amp; compose updates/tweets.</property>
+                              <object class="GtkCheckButton" id="general_look_and_feel_disable_system_bell_check_button">
+                                <property name="label" translatable="yes">Disable system _bell / beep for any alerts.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -50,17 +50,33 @@
                                 <property name="position">0</property>
                               </packing>
                             </child>
+                            <child>
+                              <object class="GtkCheckButton" id="use_tweet_dialog_checkbutton">
+                                <property name="label" translatable="yes">Use a separate _window to view &amp; compose updates/tweets.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                         </child>
                       </object>
                     </child>
                     <child type="label">
-                      <object class="GtkLabel" id="tweet_view_dont_embed_label">
+                      <object class="GtkLabel" id="general_look_and_feel_label">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;_Windows&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;_General&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                         <property name="use_underline">True</property>
-                        <property name="mnemonic_widget">use_tweet_dialog_checkbutton</property>
+                        <property name="selectable">True</property>
+                        <property name="mnemonic_widget">general_look_and_feel_disable_system_bell_check_button</property>
                       </object>
                     </child>
                   </object>
