get2gnow #00EEECaC2 - final features froze & under creation
I'm continuing to chip away at adding caching support, w/o breaking anything LOL.  Right now there are some issues with building cache file names in a way that they can easily be clean-up.  This will be easy to resolve but since its really a shiny *final touch* kinda fix, well I wanna save it until right before I'm ready for release.

Other wise I'm adding my two final features.  1st is just a list store / combo box combination that gives you access to your last 50 tweets.  I'll be making that into a preference but for now its just a constant.

My bigger, better, & 'has me giddy' new feature is my 'best friends' list view.  I've added a widget to the selected tweet area that let's you mark someone you're following as a 'best friend'. When they post a new update, since the last time you loaded get2gnow, their name appears in bold in the 'best friends updates' list. Clicking on their name opens a new tab an displaying their updates. But my fave part of this feature is my new 'best friends' tab which is just another TweetView but instead of displaying a timeline it displays your 'best friends' most recent updates.

I've also changed how maximum & minimum tweets are displayed for DMs, Replies, and 'Best Friends'.  All DMs & Replies are loaded when get2gnow starts, which I need to fix w/a preference so they're limited to say 'Show me replies from the last 1-14day' & 'Show me my Direct Messages from the last 1-7 days, 3-4 weeks, or 1-3months.  I'm still working on my 'best friends' feature, so for now its currently disabled.  I prolly have it working by the time I make my next commit...whenever that turns out to be.

No day turns out how I expect...so I expect nothing from any day & only hope to soon stop not expecting...or to have something that I've gotten used, maybe even gotten used to something that doesn't suck.  Though I don't care either so long as I stop expecting any thing, stop hoping for any thing, & 

--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -569,6 +569,8 @@
                             </child>
                           </object>
                           <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -619,6 +621,28 @@
                     <property name="label" translatable="yes">Prefere_nces</property>
                     <property name="use_underline">True</property>
                     <property name="stock_id">gtk-preferences</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparatorToolItem" id="toolbutton1">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="main_window_main_tool_bar_exit_tool_button">
+                    <property name="visible">True</property>
+                    <property name="tooltip_markup">&lt;b&gt;Close all tabs &amp;amp; quit.&lt;/b&gt;</property>
+                    <property name="label" translatable="yes">E_xit</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-quit</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
