get2gnow #00EEECaC2 - final features froze & under creation
I'm continuing to chip away at adding caching support, w/o breaking anything LOL.  Right now there are some issues with building cache file names in a way that they can easily be clean-up.  This will be easy to resolve but since its really a shiny *final touch* kinda fix, well I wanna save it until right before I'm ready for release.

Other wise I'm adding my two final features.  1st is just a list store / combo box combination that gives you access to your last 50 tweets.  I'll be making that into a preference but for now its just a constant.

My bigger, better, & 'has me giddy' new feature is my 'best friends' list view.  I've added a widget to the selected tweet area that let's you mark someone you're following as a 'best friend'. When they post a new update, since the last time you loaded get2gnow, their name appears in bold in the 'best friends updates' list. Clicking on their name opens a new tab an displaying their updates. But my fave part of this feature is my new 'best friends' tab which is just another TweetView but instead of displaying a timeline it displays your 'best friends' most recent updates.

I've also changed how maximum & minimum tweets are displayed for DMs, Replies, and 'Best Friends'.  All DMs & Replies are loaded when get2gnow starts, which I need to fix w/a preference so they're limited to say 'Show me replies from the last 1-14day' & 'Show me my Direct Messages from the last 1-7 days, 3-4 weeks, or 1-3months.  I'm still working on my 'best friends' feature, so for now its currently disabled.  I prolly have it working by the time I make my next commit...whenever that turns out to be.

No day turns out how I expect...so I expect nothing from any day & only hope to soon stop not expecting...or to have something that I've gotten used, maybe even gotten used to something that doesn't suck.  Though I don't care either so long as I stop expecting any thing, stop hoping for any thing, & 

--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -302,23 +302,22 @@
                         <property name="left_padding">12</property>
                         <property name="right_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="vbox2">
+                          <object class="GtkVBox" id="notifications_vbox">
                             <property name="visible">True</property>
                             <property name="border_width">5</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkCheckButton" id="notify_my_friends_updates_check_button">
-                                <property name="label" translatable="yes">Load my _Friends' Updates at start-up.
-And notify me when they post new update(s).</property>
+                              <object class="GtkCheckButton" id="notify_best_friends_updates_check_button">
+                                <property name="label" translatable="yes">Notify me when my Best _Friends' post new update(s).</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
                                 <property name="draw_indicator">False</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
-                                <property name="padding">6</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
@@ -330,6 +329,7 @@ And notify me when I get DMs.</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
+                                <property name="xalign">0.10000000149011612</property>
                                 <property name="draw_indicator">False</property>
                               </object>
                               <packing>
@@ -341,12 +341,13 @@ And notify me when I get DMs.</property>
                             </child>
                             <child>
                               <object class="GtkCheckButton" id="notify_at_mentions_check_button">
-                                <property name="label" translatable="yes">Load my @_replies at start-up.
+                                <property name="label" translatable="yes">Load @_replies, and mentions, sent to me at start-up.
 And notify me when I get new replies.</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="use_underline">True</property>
+                                <property name="xalign">0.34999999403953552</property>
                                 <property name="draw_indicator">False</property>
                               </object>
                               <packing>
@@ -366,6 +367,24 @@ And notify me when I get new replies.</property>
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkCheckButton" id="notify_following_updats_check_button">
+                                <property name="label" translatable="yes">Load _Updates of whomever I'm following at start-up.
+And notify me when they post new update(s).</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="xalign">0.10000000149011612</property>
+                                <property name="draw_indicator">False</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="padding">6</property>
+                                <property name="position">4</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="notify_beep_updates_check_button">
                                 <property name="label" translatable="yes">_Beep when notifying me.</property>
                                 <property name="visible">True</property>
@@ -378,7 +397,7 @@ And notify me when I get new replies.</property>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="padding">6</property>
-                                <property name="position">4</property>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                             <child>
@@ -394,7 +413,7 @@ And notify me when I get new replies.</property>
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="padding">6</property>
-                                <property name="position">5</property>
+                                <property name="position">6</property>
                               </packing>
                             </child>
                           </object>
